style: fix side nav item overflow

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -112,3 +112,7 @@
 .pagination-btn-position {
     @apply absolute md:bottom-8 md:right-10 bottom-4 right-5;
 }
+
+.no-wrap-truncate {
+    @apply whitespace-nowrap overflow-hidden text-ellipsis
+}
